--- a/main/res/layout/sauvegarde.xml
+++ b/main/res/layout/sauvegarde.xml
@@ -10,118 +10,57 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
+        android:layout_marginTop="48dp"
         android:text="@string/sauvegarde_titre"
-        android:textSize="20sp"
         android:textColor="@color/colorTextDark"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TableLayout
-        android:layout_width="308dp"
-        android:layout_height="197dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.251">
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/prenom_wapper"
-            android:layout_width="273dp"
-            android:layout_height="wrap_content"
-            android:text="@string/sauvegarde_prenom"
-            android:textColorHint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.296">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/prenom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sauvegarde_prenom"
-                android:inputType="textEmailAddress"
-                android:textColorHint="@color/colorPrimary" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/nom_wapper"
-            android:layout_width="273dp"
-            android:layout_height="wrap_content"
-            android:text="@string/sauvegarde_nom"
-            android:textColorHint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.296">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/nom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sauvegarde_nom"
-                android:inputType="textEmailAddress"
-                android:textColorHint="@color/colorPrimary" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/date_naissance_wapper"
-            android:layout_width="273dp"
-            android:layout_height="wrap_content"
-            android:text="@string/sauvegarde_date_naissance"
-            android:textColorHint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.296">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/date_naissance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sauvegarde_date_naissance"
-                android:inputType="date"
-                android:textColorHint="@color/colorPrimary" />
-
-        </android.support.design.widget.TextInputLayout>
-
-    </TableLayout>
-
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/json"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:onClick="Formulaire"
-        android:text="@string/sauvegarde_valider"
-        android:textColor="@color/colorSecondary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.594" />
+        android:layout_height="15dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/sauvegarde_json"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/jsonResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.739" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/json"
+        tools:ignore="MissingConstraints" />
+
+
+    <TextView
+        android:id="@+id/bdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/sauvegarde_bdd"
+        app:layout_constraintEnd_toEndOf="@+id/json"
+        app:layout_constraintStart_toStartOf="@+id/json"
+        app:layout_constraintTop_toBottomOf="@+id/jsonResult"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/bddResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bdd"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
