--- a/main/res/menu/menu_cycle_de_vie.xml
+++ b/main/res/menu/menu_cycle_de_vie.xml
@@ -10,6 +10,10 @@
         android:title="@string/home_permissions"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_web_service"
+        android:title="@string/home_web_service"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_deconnexion"
         android:title="@string/home_deconnexion"
         app:showAsAction="never" />
