--- a/main/res/menu/menu_webservice.xml
+++ b/main/res/menu/menu_webservice.xml
@@ -2,16 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_cycle_de_vie"
-        android:title="@string/home_cycle_de_vie"
+        android:id="@+id/action_sauvergarde"
+        android:title="@string/home_sauvegarde"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_permission"
         android:title="@string/home_permissions"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_web_service"
-        android:title="@string/home_web_service"
+        android:id="@+id/action_cycle_de_vie"
+        android:title="@string/home_cycle_de_vie"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_deconnexion"
